--- a/lab3 new/requirements.txt
+++ b/lab3 new/requirements.txt
@@ -1,5 +1,9 @@
-Flask==2.3.3
+Flask==2.0.1
 Flask-RESTful==0.3.10
 PyJWT==2.8.0
 bcrypt==4.0.1
 python-dotenv==1.0.0
+flask-sqlalchemy==2.5.1
+flask-login==0.5.0
+flask-migrate==3.1.0
+requests==2.31.0
